# waypipe

./: .clang-format  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  COPYING  Makefile  README.md  autoformat.sh  bench.c  client.c  dmabuf.c  handlers.c  interval.c  kernel.c  kernel_avx2.c  kernel_avx512f.c  kernel_neon.c  kernel_sse41.c  mainloop.c  meson.build  meson_options.txt  minimal_build.sh  parsing.c  server.c  shadow.c  test.sh  trace_all.sh  trace_bcc.sh  trace_perf.sh  util.c  util.h  video.c  waypipe.c  waypipe.scd
.gitlab-ci/: debian-install.sh  debian32-install.sh  debian32.yml
protocols/: function_list.txt  meson.build  sendgen.py  symgen.py  symgen_types.h  wayland.xml
src/: bench.c  client.c  damage.h  dmabuf.c  dmabuf.h  handlers.c  interval.c  interval.h  kernel.c  kernel.h  kernel_avx2.c  kernel_avx512f.c  kernel_neon.c  kernel_sse3.c  kernel_sse41.c  main.h  mainloop.c  meson.build  parsing.c  parsing.h  platform.c  server.c  shadow.c  shadow.h  util.c  util.h  video.c  waypipe.c
test/: build_matrix.py  common.c  common.h  damage_merge.c  diff_roundtrip.c  fake_ssh.c  fd_mirror.c  fuzz_hook.c  fuzz_hook_det.c  fuzz_hook_ext.c  fuzz_hook_int.c  headless.py  meson.build  pipe_mirror.c  protocol_control.c  protocol_functions.txt  startup_failure.py  test-proto.xml  trace_perf.sh  wire_parse.c
