option('man-pages', type: 'feature', value: 'auto', description: 'Generate and install man pages')
option('with_video', type : 'feature', value : 'auto', description : 'Link with ffmpeg libraries and provide a command line option to display all buffers using a video stream')
option('with_dmabuf', type : 'feature', value : 'auto', description : 'Support DMABUFs, the file descriptors used to exchange data for e.g. OpenGL applications')
option('with_lz4', type : 'feature', value : 'auto', description : 'Support LZ4 as a compression mechanism')
option('with_zstd', type : 'feature', value : 'auto', description : 'Support ZStandard as a compression mechanism')
option('with_vaapi', type : 'feature', value : 'auto', description : 'Link with libva and use VAAPI to perform hardware video output color space conversions on GPU')
option('with_systemtap', type: 'boolean', value: true, description: 'Enable tracing using sdt and provide static tracepoints for profiling')
option('with_avx512f', type: 'boolean', value: true, description: 'Enable avx512f SIMD instructions')
option('with_avx2', type: 'boolean', value: true, description: 'Enable avx2 SIMD instructions')
option('with_sse3', type: 'boolean', value: true, description: 'Enable sse3 SIMD instructions')
option('with_neon_opts', type: 'boolean', value: true, description: 'Enable optimizations for ARM64 neon cpus')
